# vacancy_portal

./: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  README.md  alembic.ini  authentication.py  backend_change_request_template.md  compose.test.yml  compose.yml  generate-migration-test.sh  main.py  organization_todo.md  project_requirements_template.md  pyproject.toml  run-dev.sh  run-test.sh  scopes.py  seed_test_data.py
auth/: auth.py
controller/: download_pdf.py  organization_controller.py  tenant_controller.py  upload_pdf.py  user_controller.py  utils.py
database/: db.py  org_dao.py  tenant_dao.py  user_dao.py
db_init/: init.sql
migrations/: env.py
migrations/versions/: 3fddb4d14498_remove_redundant_field_in_organization_.py  765e0c4b0017_create_organizations_table.py  797d9ae50c70_updated_userrole_to_include_a_pending_.py  a737634f2c04_initial_migration.py  d79d87a9bbd2_initial_revision.py  d96a5b8687a8_add_foreign_key_relatioship_between_.py  e59d876c704d_describe_your_change.py  ecea7fbb9924_initial_migration.py
models/: models.py  schemas.py
