[tool.poetry]
name = "vacancy-portal"
version = "0.1.0"
description = ""
authors = ["kofi12 <kofi12@my.yorku.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.19"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
