[tool.poetry]
name = "vacancy-portal"
version = "0.1.0"
description = ""
authors = ["kofi12 <kofi12@my.yorku.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.19"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
boto3 = "^1.34.162"
propelauth-fastapi = "^2.1.19"
fastapi-sso = "^0.15.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
